[package]
name = "azalea-reflection-proxy"
version = "0.1.6"
edition = "2021"
description = "Spectate and take over an azalea bot session live through a local reflection proxy — Rust port of mineflayer-reflection-proxy"
license = "MIT"
repository = "https://github.com/RaymondShell/azalea-reflection-proxy"
readme = "README.md"
keywords = ["minecraft", "azalea", "proxy", "bot", "spectator"]
categories = ["game-development", "network-programming"]
# requires nightly (azalea uses unstable features); docs.rs already
# builds with nightly by default
exclude = [".github/", ".idea/"]

[dependencies]
# Track azalea's git `main` — the proxy must speak the exact same protocol
# version the bot does, and bots built against git are on the newest
# Minecraft protocol (currently 0.16.0+mc26.2), which the crates.io 0.16
# release (mc26.1) does not yet carry. Cargo.lock pins the exact commit.
azalea-protocol = { git = "https://github.com/RaymondShell/azalea" }
azalea-auth = { git = "https://github.com/RaymondShell/azalea" }
azalea-crypto = { git = "https://github.com/RaymondShell/azalea" }
azalea-buf = { git = "https://github.com/RaymondShell/azalea" }
azalea-chat = { git = "https://github.com/RaymondShell/azalea" }
azalea-core = { git = "https://github.com/RaymondShell/azalea", features = ["bevy_ecs"] }
azalea-entity = { git = "https://github.com/RaymondShell/azalea" }
azalea-registry = { git = "https://github.com/RaymondShell/azalea" }
azalea-inventory = { git = "https://github.com/RaymondShell/azalea" }
# same crate/version azalea-client uses to locate ~/.minecraft, so the
# proxy's auth cache path is identical to Account::microsoft's
minecraft_folder_path = "0.1.2"

tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
uuid = "1.4"
flate2 = "1.0"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3